2018.8/_sources/plugins/available/diversity/core-metrics.txt
core-metrics: Core diversity metrics (non-phylogenetic)
=======================================================



.. raw:: html

   <div class="tabbed">
     <ul class="nav nav-tabs">
       <li class="active"><a data-toggle="tab" href="#cli">Command line interface</a></li>
       <li><a data-toggle="tab" href="#api">Artifact API</a></li>
     </ul>
     <div class="tab-content">
       <div id="cli" class="tab-pane fade in active">
         <h4>Docstring:</h4>
         <pre>Usage: qiime diversity core-metrics [OPTIONS]

     Applies a collection of diversity metrics (non-phylogenetic) to a feature
     table.

   Options:
     --i-table ARTIFACT PATH FeatureTable[Frequency]
                                     The feature table containing the samples
                                     over which diversity metrics should be
                                     computed.  [required]
     --p-sampling-depth INTEGER RANGE
                                     The total frequency that each sample should
                                     be rarefied to prior to computing diversity
                                     metrics.  [required]
     --m-metadata-file MULTIPLE PATH
                                     Metadata file or artifact viewable as
                                     metadata. This option may be supplied
                                     multiple times to merge metadata. The sample
                                     metadata to use in the emperor plots.
                                     [required]
     --p-n-jobs INTEGER RANGE        [beta methods only] - The number of jobs to
                                     use for the computation. This works by
                                     breaking down the pairwise matrix into
                                     n_jobs even slices and computing them in
                                     parallel. If -1 all CPUs are used. If 1 is
                                     given, no parallel computing code is used at
                                     all, which is useful for debugging. For
                                     n_jobs below -1, (n_cpus + 1 + n_jobs) are
                                     used. Thus for n_jobs = -2, all CPUs but one
                                     are used. (Description from
                                     sklearn.metrics.pairwise_distances)
                                     [default: 1]
     --o-rarefied-table ARTIFACT PATH FeatureTable[Frequency]
                                     The resulting rarefied feature table.
                                     [required if not passing --output-dir]
     --o-observed-otus-vector ARTIFACT PATH SampleData[AlphaDiversity]
                                     Vector of Observed OTUs values by sample.
                                     [required if not passing --output-dir]
     --o-shannon-vector ARTIFACT PATH SampleData[AlphaDiversity]
                                     Vector of Shannon diversity values by
                                     sample.  [required if not passing --output-
                                     dir]
     --o-evenness-vector ARTIFACT PATH SampleData[AlphaDiversity]
                                     Vector of Pielou's evenness values by
                                     sample.  [required if not passing --output-
                                     dir]
     --o-jaccard-distance-matrix ARTIFACT PATH DistanceMatrix
                                     Matrix of Jaccard distances between pairs of
                                     samples.  [required if not passing --output-
                                     dir]
     --o-bray-curtis-distance-matrix ARTIFACT PATH DistanceMatrix
                                     Matrix of Bray-Curtis distances between
                                     pairs of samples.  [required if not passing
                                     --output-dir]
     --o-jaccard-pcoa-results ARTIFACT PATH PCoAResults
                                     PCoA matrix computed from Jaccard distances
                                     between samples.  [required if not passing
                                     --output-dir]
     --o-bray-curtis-pcoa-results ARTIFACT PATH PCoAResults
                                     PCoA matrix computed from Bray-Curtis
                                     distances between samples.  [required if not
                                     passing --output-dir]
     --o-jaccard-emperor VISUALIZATION PATH
                                     Emperor plot of the PCoA matrix computed
                                     from Jaccard.  [required if not passing
                                     --output-dir]
     --o-bray-curtis-emperor VISUALIZATION PATH
                                     Emperor plot of the PCoA matrix computed
                                     from Bray-Curtis.  [required if not passing
                                     --output-dir]
     --output-dir DIRECTORY          Output unspecified results to a directory
     --cmd-config PATH               Use config file for command options
     --verbose                       Display verbose output to stdout and/or
                                     stderr during execution of this action.
                                     [default: False]
     --quiet                         Silence output if execution is successful
                                     (silence is golden).  [default: False]
     --citations                     Show citations and exit.
     --help                          Show this message and exit.</pre>
       </div>
       <div id="api" class="tab-pane fade">
       <h4>Import:</h4>

.. command-block::
   :no-exec:

   from qiime2.plugins.diversity.pipelines import core_metrics

.. raw:: html

       <h4>Docstring:</h4>
         <pre>Core diversity metrics (non-phylogenetic)

   Applies a collection of diversity metrics (non-phylogenetic) to a feature
   table.

   Parameters
   ----------
   table : FeatureTable[Frequency]
       The feature table containing the samples over which diversity metrics
       should be computed.
   sampling_depth : Int % Range(1, None)
       The total frequency that each sample should be rarefied to prior to
       computing diversity metrics.
   metadata : Metadata
       The sample metadata to use in the emperor plots.
   n_jobs : Int % Range(0, None), optional
       [beta methods only] - The number of jobs to use for the computation.
       This works by breaking down the pairwise matrix into n_jobs even slices
       and computing them in parallel. If -1 all CPUs are used. If 1 is given,
       no parallel computing code is used at all, which is useful for
       debugging. For n_jobs below -1, (n_cpus + 1 + n_jobs) are used. Thus
       for n_jobs = -2, all CPUs but one are used. (Description from
       sklearn.metrics.pairwise_distances)

   Returns
   -------
   rarefied_table : FeatureTable[Frequency]
       The resulting rarefied feature table.
   observed_otus_vector : SampleData[AlphaDiversity]
       Vector of Observed OTUs values by sample.
   shannon_vector : SampleData[AlphaDiversity]
       Vector of Shannon diversity values by sample.
   evenness_vector : SampleData[AlphaDiversity]
       Vector of Pielou's evenness values by sample.
   jaccard_distance_matrix : DistanceMatrix
       Matrix of Jaccard distances between pairs of samples.
   bray_curtis_distance_matrix : DistanceMatrix
       Matrix of Bray-Curtis distances between pairs of samples.
   jaccard_pcoa_results : PCoAResults
       PCoA matrix computed from Jaccard distances between samples.
   bray_curtis_pcoa_results : PCoAResults
       PCoA matrix computed from Bray-Curtis distances between samples.
   jaccard_emperor : Visualization
       Emperor plot of the PCoA matrix computed from Jaccard.
   bray_curtis_emperor : Visualization
       Emperor plot of the PCoA matrix computed from Bray-Curtis.</pre>
       </div>
     </div>
   </div>